# informarr

./: .gitignore  Cargo.toml  Dockerfile  jellyseerr-api.yml  seerr-api.yml
.cargo/: config.toml
src/: config.rs  controller.rs  jellyseerr.rs  main.rs  models.rs  radarr.rs  schema.rs  sonarr.rs  webhooks.rs
src/webhooks/: jellyseerr.rs  radarr.rs  seerr.rs  sonarr.rs
