[package]
name = "informarr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
edolib = { git = "https://github.com/edoren/edolib-rs.git" }
log = "0.4"
jellyseerr = { path = "./openapi_generated/jellyseerr", features = ["bon"] }
radarr = { path = "./openapi_generated/radarr", features = ["bon"] }
reqwest = { version = "0.12", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.6"
sonarr = { path = "./openapi_generated/sonarr", features = ["bon"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
serde_repr = "0.1"
chrono = "0.4"
serde_yaml = "0.9.34-deprecated"
serde_path_to_error = "0.1"
time = { version = "0.3", features = ["formatting"] }
bon = "3.7"
thiserror = "2.0"
